# autosd-example

./: .devfile.yaml  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  air  auto-image-builder.sh
.github/workflows/: build-all.yaml  build.yaml
containers/codespaces/: Containerfile
exporters/: app-exporters.yml.j2
exporters/base/: cluster-roles.yaml  role-binding-platform.yaml  service-account.yaml  stateful-set.yaml
exporters/basic-exporter/: role-binding-platform.yaml  service-account.yaml  stateful-set.yaml
exporters/jumpstarter-qemu/: role-binding-platform.yaml
files/: engine-qm.container  engine.container  httpd-doc.service  httpd-doc.yml  radio-qm.container  radio.container
files/ocp/: Containerfile.vsomeip  engine.service  engine.yml  radio.service  radio.yml  vsomeip.service  vsomeip.yml
manifests/: auto-app.aib.yml  container.aib.yml  developer.aib.yml  minimal.aib.yml  qm-container.aib.yml
manifests/examples/: container.aib.yml  qm-container.aib.yml  qm.aib.yml  static-ip.aib.yml
src/: .containerignore  CMakeLists.txt  README.md  auto-app.spec  auto-app.spec.in  auto-apps.spec  auto-apps.spec.in  main.cpp
